feat: implement InsuranceProviderController